# my_caffe

./: CMakeLists.txt  classification.cpp  convert_mnist_data.cpp  main.cpp  test_blob.cpp  test_blob.h
cmake/: FindLMDB.cmake  FindOpenBLAS.cmake  FindOpencv.cmake  FindProtoBuf.cmake
example/: 0.proto  4.proto  5.proto  lenet.prototxt  lenet2.prototxt  lenet_deploy.prototxt  mlp.prototxt  mlp_solver.prototxt  model_iter_20000.caffemodel
include/caffe/: blob.h  caffe.h  common.h  syncedmem.h
include/caffe/util/: device_alternate.h  math_functions.h
src/: CMakeLists.txt  accuracy_layer.cpp  accuracy_layer.h  base_data_layer.cpp  base_data_layer.h  benchmark.cpp  benchmark.h  blob.cpp  blob.h  blocking_queue.cpp  blocking_queue.h  caffe.cpp  caffe.h  caffe.pb.cc  caffe.pb.h  common.cpp  common.h  data_layer.cpp  data_layer.h  data_reader.cpp  data_reader.h  data_transformer.cpp  data_transformer.h  db.cpp  db.h  db_lmdb.cpp  db_lmdb.h  device_alternate.h  filter.h  format.h  inner_product_layer.cpp  inner_product_layer.h  input_layer.cpp  input_layer.h  insert_splits.cpp  insert_splits.h  internal_thread.cpp  internal_thread.h  io.cpp  io.h  (+31 more)
